Changes in 1.6
=====================

- Fix portability issues with signed vs unsigned chars in the config
  file parser (thanks to Charlène Wendling).

- The -t option now allows fractional time values (e.g. -t 0.5 to
  display for half a second).

- Set window type hint to notification to avoid shadows and other
  decorations (thanks to Markus Demleitner).

Changes in 1.5.1
=====================

- Fix black background on non-composited displays.  This is a workaround
  for the Gtk3 limitation mentioned below.

Changes in 1.5
=====================

- Updated from Gtk2/GDK to Gtk3/Cairo. Note that because of the removal
  of the `gtk_widget_shape_combine_mask' API that xcowsay used for
  transparency, we now rely on the alpha channel of the window and a
  compositing window manager for this.

- As a side effect of this, the bubble is now anti-aliased, fixing a
  long-standing issue.

- Unfortunately running xcowsay without a compositor is no longer
  supported. If this affects you please continue to use 1.4 as there are
  no functional changes in 1.5.

- The cow position is more random (thanks to Tony Finch).

Changes in 1.0 to 1.4
=====================

- Added a new option --dream which displays an image instead
  of text.

- Added a new --think mode which displays a thought bubble
  instead of the usual speech bubble

- Added new wrapper scripts xcowdream and xcowthink as
  shortcuts for the above.

- Added a new Portuguese translation (courtesy of Vinícius
  Moreira de Oliveira)

- Made --disable-dbus the default configure option as not
  many people seem to be using the daemon. Hopefully this
  will be replaced by the GNOME applet soon anyway.

- Removed the xcowat script as it was pretty useless.

- You can now click on the bubble as well as the cow to close
  the window.

- Fixed a bug where the cow could appear off the left edge
  of the screen in some circumstances. (Although this will
  still occur if the cow and bubble are wider than the screen.)
